Overflow code fix

--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -298,6 +298,9 @@
 
     height: 100%;
     padding: 0 0 0 $iui-xs;
+    display: flex;
+    overflow: hidden;
+    max-width: 25vw;
 
     svg {
       @include themed {
